--- a/.github/workflows/melon_dump.yml
+++ b/.github/workflows/melon_dump.yml
@@ -8,26 +8,26 @@ jobs:
   run_script:
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+#   steps:
+#   - uses: actions/checkout@v4
+#   - uses: actions/setup-python@v4
+#     with:
+#       python-version: '3.11'
 
-    - name: 필요한 패키지 설치
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r melon/requirements.txt
+#   - name: 필요한 패키지 설치
+#     run: |
+#       python -m pip install --upgrade pip
+#       python -m pip install -r melon/requirements.txt
 
-    - name: 스크립트 실행
-      run: |
-        python melon/dump.py
+#   - name: 스크립트 실행
+#     run: |
+#       python melon/dump.py
 
-    - name: 파일 커밋 및 푸시
-      run: |
-        git config --global user.name 'Chinseok Lee'
-        git config --global user.email 'me@pyhub.kr'
-        git add .
-        git commit -m "Update JSON file"
-        git push
+#   - name: 파일 커밋 및 푸시
+#     run: |
+#       git config --global user.name 'Chinseok Lee'
+#       git config --global user.email 'me@pyhub.kr'
+#       git add .
+#       git commit -m "Update JSON file"
+#       git push
 
